--- a/front-end/src/app/forms/form-99/reason/reason.component.html
+++ b/front-end/src/app/forms/form-99/reason/reason.component.html
@@ -16,16 +16,15 @@
         <div class="header__btns">
           <button
             type="button"
-            class="btn btn-print-preview"
+            class="btn btn-validate"
             (click)="printPreview()"
           >
             Print Preview
-          </button>
+          </button> &nbsp;
           <button
             type="button"
             class="btn btn-validate"
             (click)="validateForm()"
-            [disabled]="true"
           >
               Validate
             </button>
