--- a/front-end/src/app/shared/partials/sign/sign.component.html
+++ b/front-end/src/app/shared/partials/sign/sign.component.html
@@ -12,15 +12,15 @@
          <div class="header__btns">
            <button
              type="button"
-             class="btn btn-print-preview"
+             class="btn btn-validate"
+             (click)="printPriview()"
            >
              Print Preview
-           </button>
+           </button> &nbsp;
            <button
              type="button"
              class="btn btn-validate"
              (click)="validateForm()"
-             [disabled]="true"
            >
                Validate
              </button>
