Save and Print Functionality

--- a/django-backend/templates/email_ack.html
+++ b/django-backend/templates/email_ack.html
@@ -487,7 +487,7 @@ Your filing was received and accepted by our system on {{data.updated_at}}, and 
 
 </p>
 <p class="lead" style="color: #000000; font-family: karla, Arial, Helvetica, sans-serif; font-weight: normal; line-height: 1.6; font-size: 16px; margin: 0 0 0px; padding: 0;" align="left">
-Review your validation warnings: <br>
+Review your submitted report: <br>
 <a href="https://efoservices.fec.gov/webcheck/services/results/@REPLACE_SUBMISSION_ID" style="color:#0AACFA">https://efoservices.fec.gov/webcheck/services/results/@REPLACE_SUBMISSION_ID</a><br><br>
 </p>
 
