--- a/front-end/src/app/forms/form-99/reason/reason.component.html
+++ b/front-end/src/app/forms/form-99/reason/reason.component.html
@@ -149,13 +149,13 @@
               />              
             </div>-->
             <div class="file-upload-container" *ngIf="file === null">
-              <input 
-                #fileInput
-                type="file" 
-                name="file"
-                accept="application/pdf"
-                (change)="setFile($event)"
-              />              
+                <input 
+                  #fileInput
+                  type="file" 
+                  name="file"
+                  accept="application/pdf"
+                  (change)="setFile($event)"
+                />              
             </div>
             <div class="file-attached-container" *ngIf="file !== null">
               <div class="grid-row">
@@ -173,6 +173,7 @@
                 </div>
               </div>
             </div>
+
           </div>
         </div>
         <!-- file upload end -->              
@@ -192,7 +193,7 @@
             <button 
               class="btn btn-primary btn-right" 
               type="submit"
-              [disabled]="frmReason.controls.reasonText.errors?.requiredLength"
+              [disabled]="frmReason.controls.reasonText.errors?.requiredLength || (! _valid_file) "
             > 
              Save & Continue
             </button>  
