--- a/front-end/src/app/forms/form-99/reason/reason.component.html
+++ b/front-end/src/app/forms/form-99/reason/reason.component.html
@@ -200,6 +200,11 @@
           </div>  
         </div> 
       </div> 
+      <div class="grid-row">
+          <div class="grid-row__col grid-row__col--12">
+          <h4>* = Required</h4>    
+          </div> 
+      </div>       
     </footer>
   </form>
 </div> <!-- ./reason-container -->
