required field * related changes
required field * related changes

--- a/front-end/src/app/shared/partials/sign/sign.component.html
+++ b/front-end/src/app/shared/partials/sign/sign.component.html
@@ -24,7 +24,7 @@
            >
                Validate
              </button>
-         </div>
+            </div>
        </div>
      </header>
      <section>
@@ -114,8 +114,8 @@
            <br />
            <br />
              <div class="grid-row__col grid-row__col--12">
-               <h4>Additional email(s) for your confirmation receipt</h4>
                <br />
+               <h4>Additional email(s) for your confirmation receipt</h4>
                <div class="additional-email__field">
                 <div class="grid-row">
                 <div class="grid-col">
@@ -226,6 +226,10 @@
            </button>              
          </div>
        </div>    
-     </footer>
+       <div class="grid-row">
+          <div class="grid-row__col grid-row__col--12">
+          <h4>* = Required</h4>    
+          </div> 
+      </div>        </footer>
    </form>
  </div> <!-- ./signee-container -->
