--- a/front-end/src/app/app-layout/app-layout.component.html
+++ b/front-end/src/app/app-layout/app-layout.component.html
@@ -52,7 +52,7 @@
   <footer>
     <div class="app__footer">
       <div class="row">
-        <div class="col-sm-3">
+        <div class="col-sm-2">
           <h6>
             <strong>Federal Election Commission</strong>
             <br>
@@ -62,7 +62,7 @@
             </address>
           </h6>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-1">
           <h6>
             <strong>Main Office</strong>
             <br>
@@ -70,7 +70,7 @@
             </address>
           </h6>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-2">
           <h6><strong>RAD Analyst, Chami Mukerjee</strong>
             <br>
             <address>(202) 694-1001
@@ -79,7 +79,7 @@
             </address>
           </h6>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-1">
           <h6><strong>Tech Support</strong>
             <br>
             <address>(202) 694-1002
@@ -87,7 +87,25 @@
             <a href="mailto:tech@fec.gov" target="_blank">tech@fec.gov</a>
             </address>
           </h6>
-        </div>        
+        </div> 
+         <div class="col-sm-4">
+            <div class="legal-disclaimer">
+                <button
+                  type="button"
+                  class="btn btn-link"
+                  (click)="open()"
+                >
+                  Legal Disclaimer
+                </button>
+              </div>
+              <div class="legal-text" [hidden]="!showLegalDisclaimer">
+                <p>
+                  Please be advised that knowingly and willfully making any materially false, fictitious, or fraudulent statement or representation to a federal
+                  government agency, including the Federal Election Commission, is punishable under the provisions of 18 U.S.C. § 1001. The Commission may report
+                  apparent violations to the appropriate law enforcement authorities. 52 U.S.C. § 30107(a)(9).
+                </p>          
+              </div>          
+          </div>                
       </div>
     </div>
   </footer>
