--- a/front-end/src/app/login/login.component.scss
+++ b/front-end/src/app/login/login.component.scss
@@ -39,6 +39,12 @@
       }
       .grid-row__col {
         padding: 0;
+        label {
+          font-family: $titleFontFamily;
+        }
+        .link {
+          font-family: $mainFontFamily;
+        }
         .login-input {
           @include make-text-input(265px, 1.5em, 1em, 1em);
           @include media(tablet) {
@@ -67,6 +73,7 @@
           @include button-variant($primaryBlue, $primaryBlue);
           @include button-size($input-btn-padding-y, $input-btn-padding-x, 1.5em, $input-btn-line-height, $btn-border-radius);
           cursor: pointer;
+          font-family: $mainFontFamily;
           margin-bottom: 15px;
           margin-top: 30px;
           width: 275px;
