Adding validation message to thank you screen

--- a/front-end/src/app/forms/form-99/form/form.component.html
+++ b/front-end/src/app/forms/form-99/form/form.component.html
@@ -2,8 +2,7 @@
   <div 
     class="form__alerts"
     [ngClass]="{
-      'show-alerts': showValidateBar === true,
-      'hide-alerts': step==='step_5'
+      'show-alerts': showValidateBar === true
     }"
   >
     <app-validate></app-validate>
