--- a/front-end/src/app/forms/form-99/reason/reason.component.html
+++ b/front-end/src/app/forms/form-99/reason/reason.component.html
@@ -86,7 +86,7 @@
           <div class="grid-row__col grid-row__col--12">
             <div class="text-editor">
               <textarea 
-                placeholder="Enter text here..."
+                placeholder="Enter text here (max 20,000 characters)."
                 (keyup)="updateValidation()"
                 formControlName="reasonText"
               ></textarea>
