--- a/front-end/src/app/shared/partials/submit/submit.component.html
+++ b/front-end/src/app/shared/partials/submit/submit.component.html
@@ -5,8 +5,11 @@
   </header>
   <section>
     <div class="content">
+      <div class="validate__form show-alerts">
+        <app-validate></app-validate>
+      </div>
       The form has been successfully filed. You will receive an email confirmation shortly. 
-      If you don't receive a confirmation email, please contact the Electronic Filing Office at (202) 694-1307.
+      If you don't receive a confirmation email, please contact the Electronic Filing Office at (202) 694-1307.        
     </div>
   </section>
 </div>
