--- a/front-end/src/app/forms/form-99/reason/reason.component.html
+++ b/front-end/src/app/forms/form-99/reason/reason.component.html
@@ -18,6 +18,7 @@
             type="button"
             class="btn btn-validate"
             (click)="printPreview()"
+            [disabled]="true"
           >
             Print Preview
           </button> &nbsp;
@@ -77,16 +78,23 @@
           <div class="grid-row__col grid-row__col--12"
             *ngIf="_not_valid_pdf">
             <div class="text-error text-center" *ngIf="_not_valid_pdf">
-              You can upload only pdf file.
+              You are attempting to attach a non-PDF, please only attach a PDF.
             </div>
           </div>
         </div>
-
+        <div class="grid-row">
+          <div class="grid-row__col grid-row__col--12"
+            *ngIf="_not_valid_pdf">
+            <div class="text-error text-center" *ngIf="_not_correct_pdf_size">
+              The attachment size exceeds the allowable limit.
+            </div>
+          </div>
+        </div>
         <div class="grid-row">
           <div class="grid-row__col grid-row__col--12">
             <div class="text-editor">
               <textarea 
-                placeholder="Enter text here (max 20,000 characters)."
+                placeholder="Enter text here..."
                 (keyup)="updateValidation()"
                 formControlName="reasonText"
               ></textarea>
@@ -149,13 +157,13 @@
               />              
             </div>-->
             <div class="file-upload-container" *ngIf="file === null">
-                <input 
-                  #fileInput
-                  type="file" 
-                  name="file"
-                  accept="application/pdf"
-                  (change)="setFile($event)"
-                />              
+              <input 
+                #fileInput
+                type="file" 
+                name="file"
+                accept="application/pdf"
+                (change)="setFile($event)"
+              />              
             </div>
             <div class="file-attached-container" *ngIf="file !== null">
               <div class="grid-row">
@@ -173,7 +181,6 @@
                 </div>
               </div>
             </div>
-
           </div>
         </div>
         <!-- file upload end -->              
@@ -193,18 +200,13 @@
             <button 
               class="btn btn-primary btn-right" 
               type="submit"
-              [disabled]="frmReason.controls.reasonText.errors?.requiredLength || (! _valid_file) "
+              [disabled]="frmReason.controls.reasonText.errors?.requiredLength || (! _valid_file)"
             > 
              Save & Continue
             </button>  
           </div>  
         </div> 
       </div> 
-      <div class="grid-row">
-          <div class="grid-row__col grid-row__col--12">
-          <h4>* = Required</h4>    
-          </div> 
-      </div>       
     </footer>
   </form>
 </div> <!-- ./reason-container -->
