disabled print preview button
disabled print preview button

--- a/front-end/src/app/shared/partials/preview/preview.component.html
+++ b/front-end/src/app/shared/partials/preview/preview.component.html
@@ -41,6 +41,7 @@
             type="button"
             class="btn btn-validate"
             (click)="printPreview()"
+            [disabled]="true"
           >
             Print Preview
           </button> &nbsp;
