--- a/front-end/src/app/shared/partials/sign/sign.component.html
+++ b/front-end/src/app/shared/partials/sign/sign.component.html
@@ -14,6 +14,7 @@
              type="button"
              class="btn btn-validate"
              (click)="printPriview()"
+             [disabled]="true"
            >
              Print Preview
            </button> &nbsp;
