Creating first screen of form 3x

--- a/front-end/src/app/forms/forms.component.html
+++ b/front-end/src/app/forms/forms.component.html
@@ -4,5 +4,8 @@
       <!-- begin form 99 -->
       <app-form-99></app-form-99>
     </div>
+    <div *ngIf="form_type === '3x'">
+    	<dynamic-forms></dynamic-forms>
+    </div>
   </div>
 </div>
