--- a/front-end/src/app/forms/dynamic-forms/dynamic-forms.component.html
+++ b/front-end/src/app/forms/dynamic-forms/dynamic-forms.component.html
@@ -1,6 +1,13 @@
-<div class="forms__wizard">
-	<div class="form__sidebar"></div>
+<div class="forms__wizard" *ngIf="!loading">
+	<div class="form__sidebar">
+   <form-sidebar
+    [sidebarLinks]="sidebarLinks"
+   ></form-sidebar>
+  </div>
 	<div class="form__container">
-    <app-steps [steps]="steps" [current_step]="step_1"></app-steps>
+    <app-steps
+      [steps]="steps"
+      [current_step]="step_1"
+    ></app-steps>
 	</div>
 </div>
