Working on form sidebar links for transaction categories.

--- a/front-end/src/app/forms/dynamic-forms/dynamic-forms.component.html
+++ b/front-end/src/app/forms/dynamic-forms/dynamic-forms.component.html
@@ -1,6 +1,7 @@
 <div class="forms__wizard" *ngIf="!loading">
 	<div class="form__sidebar">
    <form-sidebar
+    title="Transaction Categories"
     [sidebarLinks]="sidebarLinks"
    ></form-sidebar>
   </div>
