--- a/front-end/src/app/shared/partials/form-sidebar/form-sidebar.component.scss
+++ b/front-end/src/app/shared/partials/form-sidebar/form-sidebar.component.scss
@@ -1,14 +1,46 @@
 @import '../../scss/global';
 
 .form-sidebar {
+  margin-left: auto;
+  margin-right: auto;
   .form-sidebar__links {
     list-style-type: none;
-    margin-left: auto;
-    margin-right: auto;
-    li {
+    .form-sidebar-item {
+      &:first-child {
+        border-top: 1px solid $white;
+      }
+      border-bottom: 1px solid $white;
       display: block;
-      margin-bottom: 10px;
-      margin-top: 10px;
-    }
+      height: 30px;
+      line-height: 30px;
+      padding-left: 15px;
+      vertical-align: middle;
+      .btn-link {
+        color: $black;
+        &:active,
+        &:focus,
+        &:hover,
+        &:visited {
+          color: $black;
+          text-decoration: none;
+        }
+        &.selected {
+          color: $white;
+          &:active,
+          &:focus,
+          &:hover,
+          &:visited {
+            color: $white;
+            text-decoration: none;
+          }
+        }
+      }
+      .additional-options {
+        display: none;
+        &.visible {
+          display: block;
+        }
+      }
+    } // .form-sidebar__links
   }
 }
