Working on form 3x sidebar navigation

--- a/front-end/src/app/shared/partials/form-sidebar/form-sidebar.component.html
+++ b/front-end/src/app/shared/partials/form-sidebar/form-sidebar.component.html
@@ -4,7 +4,7 @@
     <hr />
   </header>
   <section>
-    <div *ngIf="searchField">
+    <div class="search-field" *ngIf="searchField">
       <input
         type="{{ searchField.type }}"
         name="{{ searchField.name }}"
