--- a/front-end/src/app/shared/partials/form-sidebar/form-sidebar.component.scss
+++ b/front-end/src/app/shared/partials/form-sidebar/form-sidebar.component.scss
@@ -3,6 +3,11 @@
 .form-sidebar {
   margin-left: auto;
   margin-right: auto;
+  .search-field {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
   .form-sidebar__links {
     list-style-type: none;
     margin-top: 15px;
