--- a/front-end/src/app/forms/dynamic-forms/dynamic-forms.component.scss
+++ b/front-end/src/app/forms/dynamic-forms/dynamic-forms.component.scss
@@ -47,9 +47,14 @@
         .options-list {
           list-style-type: none;
           .options-list__item {
-            padding-bottom: 10px;
+            border-bottom: 1px solid $iron;
+            border-top: 1px solid $iron;
+            padding-bottom: 20px;
             padding-left: 10px;
-            padding-top: 10px;
+            padding-top: 20px;
+            &:nth-child(even) {
+              background-color: $seaShell;
+            }
           }
         }
       }
