--- a/front-end/src/app/shared/partials/form-sidebar/form-sidebar.component.html
+++ b/front-end/src/app/shared/partials/form-sidebar/form-sidebar.component.html
@@ -44,7 +44,7 @@
               </button>
               <button
                 type="button"
-                class="btn btn-link btn-tooltip"
+                class="btn-info"
                 ngbTooltip="{{ option?.info }}"
                 *ngIf="option.infoIcon"
               >
